--- a/res/preambule.sty
+++ b/res/preambule.sty
@@ -26,6 +26,7 @@
 \usepackage{lmodern}
 \usepackage{multicol}
 \usepackage{multirow}
+\usepackage{parskip}
 \usepackage{pgfplots}
 \usepackage{pgfplotstable}
 \usepackage{placeins}
