--- a/sections/section3-6_1.tex
+++ b/sections/section3-6_1.tex
@@ -98,11 +98,10 @@
                 \addplot table{\tblAHuang};
                 \addplot table{\tblABiggs};
             \end{semilogyaxis}   
-            \label{fig:fig1c}%
         \end{tikzpicture} 
     }}%
     \caption{Análise gráfica da dispersão dos Métodos Quase-Newton para a técnica da seção áurea feita por meio da avaliação direta da função objetivo e parâmetro $\alpha=-0.0263$.}%
-    \label{fig:fig1}%
+    \label{fig:quanewaudiraneg}%
 \end{figure}
 
 \FloatBarrier
