--- a/sections/section3-6_2.tex
+++ b/sections/section3-6_2.tex
@@ -99,11 +99,10 @@
                 \addplot table{\tblBHuang};
                 \addplot table{\tblBBiggs};
             \end{semilogyaxis}   
-            \label{fig:fig1c}%
         \end{tikzpicture} 
     }}%
-    \caption{Análise gráfica da dispersão dos Métodos Quase-Newton para a técnica da seção áurea feita por meio da avaliação direta da função objetivo e parâmetro $\alpha=0$.}%
-    \label{fig:fig1}%
+    \caption{Análise gráfica da dispersão dos Métodos Quase-Newton para a técnica da seção áurea feita por meio de aproximações quadráticas da função objetivo e parâmetro $\alpha=0$.}%
+    \label{fig:quanewauaproxazer}%
 \end{figure}
 
 \FloatBarrier
