Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -19,11 +19,11 @@
     \tableofcontents
     \newpage
     \setlength{\parindent}{0cm}
-    \section{Introdução}
+    \part{Introdução}
         \import{sections/}{section1}
-    \section{Desenvolvimento}
+    \part{Desenvolvimento}
         \import{sections/}{section2}
-    \section{Experimentos e Resultados}
+    \part{Experimentos e Resultados}
         \import{sections/}{section3-Intro}
         \import{sections/}{section3-1}
         \import{sections/}{section3-2}
@@ -31,6 +31,6 @@
         \import{sections/}{section3-4}
         \import{sections/}{section3-5}
         \import{sections/}{section3-6}
-    \section{Conclusão}
+    \part{Conclusão}
         \import{sections/}{section4}
 \end{document}
