--- a/sections/section1.tex
+++ b/sections/section1.tex
@@ -1,10 +1,9 @@
 % Introdução
-\subsection{Método do Gradiente}
-\subsection{Método de Newton}
-\subsection{Métodos de Quase-Newton}
-\subsection{Método BFGS}
-\subsection{Método DFP}
-\subsection{Adaptação de Huang}
-\subsection{Adaptação de Bings}
-
+\section{Método do Gradiente}
+\section{Método de Newton}
+\section{Métodos de Quase-Newton}
+\section{Método BFGS}
+\section{Método DFP}
+\section{Adaptação de Huang}
+\section{Adaptação de Bings}
 \newpage
