--- a/sections/section3-2.tex
+++ b/sections/section3-2.tex
@@ -7,8 +7,8 @@
 \pgfplotstableread{data/sect3s2/sec3s2tbl12a.txt}{\tblm}
 \pgfplotstableread{data/sect3s2/sec3s2tbl12b.txt}{\tbln}
 
-\subsection{2° Experimento: Avaliação das Funções Não Quadráticas}
-    \subsubsection{Função Analisada}
+\section{2° Experimento: Avaliação das Funções Não Quadráticas}
+    \subsection{Função Analisada}
 
     A função analisada consiste na função da seção \ref{sec:secfun}.
 
@@ -95,5 +95,15 @@
         \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando $\alpha = 1.0$}
     \end{minipage}
     \vspace{3mm}
+
+    \subsubsection{Conclusão Parcial}
+            Para funções quadráticas, os métodos Quase-Newton:
+            \begin{itemize}
+            \item {Tempo (s):} 
+            \item {Iterações:} 
+            \item {Avaliações de$F(x)$:} 
+            \item {Erro $X_{sol}$ (\%):} 
+            \item {Erro $F(x_{sol})$ (\%):} 
+            \end{itemize}
          
 \newpage    
