--- a/sections/section3-3.tex
+++ b/sections/section3-3.tex
@@ -6,8 +6,8 @@
 \pgfplotstableread{data/sect3s3/sec3s3tbl13d.txt}{\tblr}
 \pgfplotstableread{data/sect3s3/sec3s3tbl13e.txt}{\tbls}
 
-\subsection{3° Experimento: Avaliação do Custo Computacional em Função de Variação da Dimensão}
-    \subsubsection{Função Analisada}
+\section{3° Experimento: Avaliação do Custo Computacional em Função de Variação da Dimensão}
+    \subsection{Função Analisada}
 
         \begin{minipage}[h!]{\linewidth}
             \centering
@@ -36,5 +36,15 @@
             \writetable{\tbls}
             \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando a dimensão $n$}
         \end{minipage}
+
+        \subsubsection{Conclusão Parcial}
+            Para funções quadráticas, os métodos Quase-Newton:
+            \begin{itemize}
+            \item {Tempo (s):} 
+            \item {Iterações:} 
+            \item {Avaliações de$F(x)$:} 
+            \item {Erro $X_{sol}$ (\%):} 
+            \item {Erro $F(x_{sol})$ (\%):} 
+            \end{itemize}
     
 \newpage
