--- a/sections/section3-4.tex
+++ b/sections/section3-4.tex
@@ -5,8 +5,8 @@
 \pgfplotstableread{data/sect3s4/sec3s4tbl15a.txt}{\tblv}
 \pgfplotstableread{data/sect3s4/sec3s4tbl15b.txt}{\tblx}
 
-\subsection{4° Experimento: Técnica da Seção Áurea - Avaliação Direta da Função e Aproximações Quadráticas da Função a Cada Iteração}
-    \subsubsection{Primeira Função Analisada}
+\section{4° Experimento: Técnica da Seção Áurea - Avaliação Direta da Função e Aproximações Quadráticas da Função a Cada Iteração}
+    \subsection{Primeira Função Analisada}
 
         \begin{minipage}[h!]{\linewidth}
             \centering
@@ -20,8 +20,18 @@
             \writetable{\tblu}
             \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando o ponto inicial $x_0$}
         \end{minipage}
+
+        \subsubsection{Conclusão Parcial}
+            Para funções quadráticas, os métodos Quase-Newton:
+            \begin{itemize}
+            \item {Tempo (s):} 
+            \item {Iterações:} 
+            \item {Avaliações de$F(x)$:} 
+            \item {Erro $X_{sol}$ (\%):} 
+            \item {Erro $F(x_{sol})$ (\%):} 
+            \end{itemize}
         
-    \subsubsection{Segunda Função Analisada}
+    \subsection{Segunda Função Analisada}
 
         \begin{minipage}[h!]{\linewidth}
             \centering
@@ -35,5 +45,15 @@
             \writetable{\tblx}
             \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando o ponto inicial $x_0$}
         \end{minipage}
+
+        \subsubsection{Conclusão Parcial}
+            Para funções quadráticas, os métodos Quase-Newton:
+            \begin{itemize}
+            \item {Tempo (s):} 
+            \item {Iterações:} 
+            \item {Avaliações de$F(x)$:} 
+            \item {Erro $X_{sol}$ (\%):} 
+            \item {Erro $F(x_{sol})$ (\%):} 
+            \end{itemize}
 
 \newpage
