--- a/sections/section3-5.tex
+++ b/sections/section3-5.tex
@@ -3,8 +3,8 @@
 \pgfplotstableread{data/sect3s5/sec3s5tbl16a.txt}{\tblz}
 \pgfplotstableread{data/sect3s5/sec3s5tbl16b.txt}{\tblw}
 
-\subsection{5° Experimento: Avaliação dos Métodos Quase-Newton em Problemas com Hessiana Singular}
-    \subsubsection{Função Analisada}
+\section{5° Experimento: Avaliação dos Métodos Quase-Newton em Problemas com Hessiana Singular}
+    \subsection{Função Analisada}
 
         \begin{minipage}[h!]{\linewidth}
             \centering
@@ -18,5 +18,15 @@
             \writetable{\tblw}
             \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando o ponto inicial $x_0$}
         \end{minipage}
+
+        \subsubsection{Conclusão Parcial}
+            Para funções quadráticas, os métodos Quase-Newton:
+            \begin{itemize}
+            \item {Tempo (s):} 
+            \item {Iterações:} 
+            \item {Avaliações de$F(x)$:} 
+            \item {Erro $X_{sol}$ (\%):} 
+            \item {Erro $F(x_{sol})$ (\%):} 
+            \end{itemize}
         
 \newpage
