--- a/sections/section3-6.tex
+++ b/sections/section3-6.tex
@@ -1,6 +1,6 @@
 % Experimentos e Resultados
-\subsection{6° Experimento: Avaliação Estatística dos Métodos Quase-Newton com Variação do Parâmetro $\alpha$}
-    \subsubsection{Função Analisada}
+\section{6° Experimento: Avaliação Estatística dos Métodos Quase-Newton com Variação do Parâmetro $\alpha$}
+    \subsection{Função Analisada}
 
     \subsection{Técnica da Seção Áurea Feita por meio da avaliação direta de $F(x)$ e $\alpha=-0.0236$}
         \input{sections/section3-6_1}
