--- a/sections/section3-6_1.tex
+++ b/sections/section3-6_1.tex
@@ -151,5 +151,15 @@
     \label{fig:example}%
 \end{figure} 
 
+    \subsubsection{Conclusão Parcial}
+        Para funções quadráticas, os métodos Quase-Newton:
+        \begin{itemize}
+        \item {Tempo (s):} 
+        \item {Iterações:} 
+        \item {Avaliações de$F(x)$:} 
+        \item {Erro $X_{sol}$ (\%):} 
+        \item {Erro $F(x_{sol})$ (\%):} 
+        \end{itemize}
+
 \FloatBarrier
 \newpage
