--- a/sections/section3-6_2.tex
+++ b/sections/section3-6_2.tex
@@ -153,4 +153,14 @@
 \end{figure} 
 
 \FloatBarrier
+
+\subsubsection{Conclusão Parcial}
+    Para funções quadráticas, os métodos Quase-Newton:
+    \begin{itemize}
+    \item {Tempo (s):} 
+    \item {Iterações:} 
+    \item {Avaliações de$F(x)$:} 
+    \item {Erro $X_{sol}$ (\%):} 
+    \item {Erro $F(x_{sol})$ (\%):} 
+    \end{itemize}
 \newpage
